name:                hqs
version:             0.1.0.1
synopsis:            A Haskell URL encoding module.
homepage:            https://github.com/hqs
license:             MIT
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
copyright:           (c) 2014 Pedro Tacla Yamada
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.HQs
  build-depends:       base >=4.7 && <5
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite hspec
    build-depends:     base >=4.7 && <5
                     , hspec >=1.11 && <2
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    buildable:         True
    default-language:  Haskell2010
    hs-source-dirs:    src
                     , test
